# nixops-azure

./: .gitignore  pyproject.toml  shell.nix
nixops_azure/: plugin.py
