[tool.poetry]
name = "nixops_azure"
version = "1.0"
description = "NixOps plugin for Azure"
authors = [
    "bornlogic <infra@bornlogic.com>",
    "Mário Queiroz <mario.al.queiroz@gmail.com>",
    "Iury Fukuda <zbioe@protonmail.com>"
]
license = "MIT"
include = [ "nixops_azure/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"

[tool.poetry.plugins."nixops"]
azure = "nixops_azure.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
